// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConsentBanner should correctly render for ltr service 1`] = `
.emotion-10 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #323232;
  padding: 1rem 0.5rem;
}

@media (min-width:25rem) {
  .emotion-10 {
    padding: 1rem;
  }
}

.emotion-8 {
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-8::after {
  content: '\\0020';
  display: block;
  height: 0;
  clear: both;
  overflow: hidden;
  visibility: hidden;
}

.emotion-0 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #FFFFFF;
  font-weight: 700;
  padding: 0;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    float: left;
    margin-right: 3.5%;
    width: 22%;
  }
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #F6A21D;
  font-weight: 600;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-6 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-6 li + li {
  padding-top: 0.5rem;
}

@media (min-width:37.5rem) {
  .emotion-6 {
    width: 18%;
    float: right;
  }
}

.emotion-2 button {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #F6A21D;
  font-weight: 700;
  background: none;
  border: none;
  padding: 0;
  margin: 0;
  cursor: pointer;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 button {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 button {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

.emotion-2 button:focus,
.emotion-2 button:hover {
  color: #FFFFFF;
}

.emotion-2 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 a:focus,
.emotion-2 a:hover {
  color: #FFFFFF;
}

<div>
  <div
    class="emotion-10 emotion-11"
    dir="ltr"
    id="banner-id"
  >
    <div
      class="emotion-8 emotion-9"
      dir="ltr"
    >
      <h2
        class="emotion-0 emotion-1"
        dir="ltr"
      >
        We've updated our Privacy and Cookies Policy
      </h2>
      <p>
        Hello
      </p>
      <ul
        class="emotion-6 emotion-7"
        dir="ltr"
      >
        <li
          class="emotion-2 emotion-3"
          dir="ltr"
        >
          <button
            type="button"
          >
            Accept
          </button>
        </li>
        <li
          class="emotion-2 emotion-3"
          dir="ltr"
        >
          <a
            href="https://foobar.com"
          >
            Reject
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ConsentBanner should correctly render for rtl service 1`] = `
.emotion-8 {
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-8::after {
  content: '\\0020';
  display: block;
  height: 0;
  clear: both;
  overflow: hidden;
  visibility: hidden;
}

.emotion-10 {
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #323232;
  padding: 1rem 0.5rem;
}

@media (min-width:25rem) {
  .emotion-10 {
    padding: 1rem;
  }
}

.emotion-0 {
  font-size: 1.375rem;
  line-height: 1.75rem;
  color: #FFFFFF;
  font-weight: 700;
  padding: 0;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.625rem;
    line-height: 2.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    float: right;
    margin-left: 3.5%;
    width: 22%;
  }
}

.emotion-6 {
  font-size: 1.0625rem;
  line-height: 1.5rem;
  color: #F6A21D;
  font-weight: 600;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-6 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

.emotion-6 li + li {
  padding-top: 0.5rem;
}

@media (min-width:37.5rem) {
  .emotion-6 {
    width: 18%;
    float: left;
  }
}

.emotion-2 button {
  font-size: 1.375rem;
  line-height: 1.75rem;
  color: #F6A21D;
  font-weight: 700;
  background: none;
  border: none;
  padding: 0;
  margin: 0;
  cursor: pointer;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 button {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 button {
    font-size: 1.625rem;
    line-height: 2.125rem;
  }
}

.emotion-2 button:focus,
.emotion-2 button:hover {
  color: #FFFFFF;
}

.emotion-2 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 a:focus,
.emotion-2 a:hover {
  color: #FFFFFF;
}

<div>
  <div
    class="emotion-10 emotion-11"
    dir="rtl"
    id="banner-id"
  >
    <div
      class="emotion-8 emotion-9"
      dir="rtl"
    >
      <h2
        class="emotion-0 emotion-1"
        dir="rtl"
      >
        عنوان
      </h2>
      <p>
        مرحبا
      </p>
      <ul
        class="emotion-6 emotion-7"
        dir="rtl"
      >
        <li
          class="emotion-2 emotion-3"
          dir="rtl"
        >
          <button
            type="button"
          >
            قبول
          </button>
        </li>
        <li
          class="emotion-2 emotion-3"
          dir="rtl"
        >
          <a
            href="https://foobar.com"
          >
            رفض
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ConsentBanner with hidden attribute on wrapper should correctly render 1`] = `
.emotion-10 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #323232;
  padding: 1rem 0.5rem;
}

@media (min-width:25rem) {
  .emotion-10 {
    padding: 1rem;
  }
}

.emotion-8 {
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-8::after {
  content: '\\0020';
  display: block;
  height: 0;
  clear: both;
  overflow: hidden;
  visibility: hidden;
}

.emotion-0 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #FFFFFF;
  font-weight: 700;
  padding: 0;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    float: left;
    margin-right: 3.5%;
    width: 22%;
  }
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #F6A21D;
  font-weight: 600;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-6 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-6 li + li {
  padding-top: 0.5rem;
}

@media (min-width:37.5rem) {
  .emotion-6 {
    width: 18%;
    float: right;
  }
}

.emotion-2 button {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #F6A21D;
  font-weight: 700;
  background: none;
  border: none;
  padding: 0;
  margin: 0;
  cursor: pointer;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 button {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 button {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

.emotion-2 button:focus,
.emotion-2 button:hover {
  color: #FFFFFF;
}

.emotion-2 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 a:focus,
.emotion-2 a:hover {
  color: #FFFFFF;
}

<div>
  <div
    class="emotion-10 emotion-11"
    dir="ltr"
    hidden=""
    id="banner-id"
  >
    <div
      class="emotion-8 emotion-9"
      dir="ltr"
    >
      <h2
        class="emotion-0 emotion-1"
        dir="ltr"
      >
        We've updated our Privacy and Cookies Policy
      </h2>
      <p>
        Hello
      </p>
      <ul
        class="emotion-6 emotion-7"
        dir="ltr"
      >
        <li
          class="emotion-2 emotion-3"
          dir="ltr"
        >
          <button
            type="button"
          >
            Accept
          </button>
        </li>
        <li
          class="emotion-2 emotion-3"
          dir="ltr"
        >
          <a
            href="https://foobar.com"
          >
            Reject
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ConsentBannerText should correctly render 1`] = `
.emotion-0 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #BEBEBE;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    margin: 0;
    float: left;
    width: 53%;
  }
}

.emotion-0 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 a:focus,
.emotion-0 a:hover {
  color: #FFFFFF;
}

<div>
  <p
    class="emotion-0 emotion-1"
    dir="ltr"
  >
    We have made some important changes to our Privacy and Cookies Policy and we want you to know what this means for you and your data.
  </p>
</div>
`;
